--- a/docs/css/vault.css
+++ b/docs/css/vault.css
@@ -6,9 +6,10 @@
 .vault-container {
     display: grid;
     grid-template-columns: 280px 1fr;
-    min-height: calc(100vh - 60px);
+    min-height: calc(100vh - var(--navbar-height));
     max-width: 1600px;
     margin: 0 auto;
+    margin-top: var(--navbar-height);
 }
 
 /* Sidebar */
